# infrawatch

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
sample_data/: bandwidth.csv  cpu.csv  demo_metrics.json  errors.csv  latency.csv  memory.csv
src/infrawatch/: __init__.py  cli.py
src/infrawatch/alert/: __init__.py  engine.py  notifiers.py
src/infrawatch/api/: __init__.py  app.py
src/infrawatch/collect/: __init__.py  file_ingest.py  metric.py  prometheus.py  snmp.py  statsd.py
src/infrawatch/dashboard/: __init__.py  server.py
src/infrawatch/detect/: __init__.py  context.py  pipeline.py  severity.py
src/infrawatch/forecast/: __init__.py  engine.py
src/infrawatch/maintenance/: __init__.py  manager.py
src/infrawatch/models/: __init__.py  base.py  ensemble.py  foundation.py  ml.py  statistical.py
src/infrawatch/preprocess/: __init__.py  counters.py  decompose.py  gaps.py  normalize.py  outliers.py  pipeline.py  resample.py
tests/: conftest.py  test_alert.py  test_api.py  test_cli.py  test_collectors.py  test_detect.py  test_forecast.py  test_maintenance.py  test_metric.py  test_models.py  test_preprocess.py
